[package]
name = "minivm"
version = "0.1.0"
authors = ["Martin Billinger <flkazemakase@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2"
pest_derive = "2"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "fibonacci_native"
harness = false

[[bench]]
name = "fibonacci_cps_bytecode"
harness = false
[[bench]]
name = "fibonacci_stack_bytecode"
harness = false